--- a/index.qmd
+++ b/index.qmd
@@ -1,19 +1,58 @@
 ---
 title: "Yannick Winkler" 
-title-block-banner: "#00000000"
-title-block-banner-color: "rgba(255, 255, 255, 0.9)"
 about:
   template: jolla # trestles , solana, marquee [https://quarto.org/docs/websites/website-about.html]
 
 format:
   html:
-    css: header.css  
+    css: style.css  
     template-partials:
       - title-block.html # Use the custom title block partial
-    toc: false 
----
+    toc: false
 
-<!-- ::: {.column-page} -->
+title-block-banner: "#00000000"
+title-block-banner-color: "rgba(255, 255, 255, 0.9)"
+include-in-header:
+  - text: |
+      <style>
+      #title-block-header.quarto-title-block.default .quarto-title-meta {
+        color: rgba(255, 255, 255, 0.8);
+      }
+      
+      
+      #title-block-header {
+        background:
+          /* top, transparent black overlay */
+          linear-gradient(
+            rgba(0, 0, 0, 0.7), 
+            rgba(0, 0, 0, 0.7)
+          ),
+          /* bottom, image */
+          url(./img/nn_wanderer.png);
+        background-size: cover;
+        background-position-y: center;
+        height: 250px;   
+        opacity: 0.8; 
+        z-index: -1; /* Keep behind potential future elements if needed */
+      
+        /* Ensure the block still takes up space */
+        display: block;
+        padding: 0;
+        margin: 0;
+      }
+      
+      #title-block-header::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.4);
+      }
+      </style>
+---
+<!--  ::: {.column-page} -->
 <!-- Use column-page for better control over content width on wider screens -->
 
 <b> Welcome! </b>
@@ -58,21 +97,3 @@ This Sommersemester, I am teaching **Datenanalyse mit R**. The course is designe
 <!-- ::: -->
 
 
-<style>
-/* Optional: Add some specific CSS for this page directly */
-/* Or better, add to your main styles.scss */
-.custom-grid .g-col {
-  margin-bottom: 1.5rem; /* Add spacing between grid items */
-}
-.custom-grid h3 {
-  margin-bottom: 0.75rem;
-  font-size: 1.2rem; /* Slightly smaller headings for grid items */
-  border-bottom: 1px solid #eee; /* Subtle separator */
-  padding-bottom: 0.3rem;
-}
-.custom-grid .btn {
-  margin-right: 0.5rem;
-  margin-top: 0.5rem;
-}
-
-</style>
