--- a/about.qmd
+++ b/about.qmd
@@ -22,6 +22,13 @@ about:
     #   href: "path/to/your_cv.pdf"
 
 toc: false
+
+format:
+  html:
+    css: header.css  
+    template-partials:
+      - title-block.html # Use the custom title block partial
+    toc: false 
 ---
 
 I’m a research associate specializing in Computational Communication Science, with a career that bridges political science, hands-on political work, and empirical research. 
