--- a/index.qmd
+++ b/index.qmd
@@ -1,56 +1,14 @@
 ---
-title: "Yannick Winkler" 
-about:
-  template: jolla # trestles , solana, marquee [https://quarto.org/docs/websites/website-about.html]
+title: "Home"
+title-block-banner: "#00000000"
+title-block-banner-color: "rgba(255, 255, 255, 0.9)"
 
 format:
   html:
     css: style.css  
     template-partials:
       - title-block.html # Use the custom title block partial
-    toc: false
-
-title-block-banner: "#00000000"
-title-block-banner-color: "rgba(255, 255, 255, 0.9)"
-include-in-header:
-  - text: |
-      <style>
-      #title-block-header.quarto-title-block.default .quarto-title-meta {
-        color: rgba(255, 255, 255, 0.8);
-      }
-      
-      
-      #title-block-header {
-        background:
-          /* top, transparent black overlay */
-          linear-gradient(
-            rgba(0, 0, 0, 0.7), 
-            rgba(0, 0, 0, 0.7)
-          ),
-          /* bottom, image */
-          url(./img/nn_wanderer.png);
-        background-size: cover;
-        background-position-y: center;
-        height: 250px;   
-        opacity: 0.8; 
-        z-index: -1; /* Keep behind potential future elements if needed */
-      
-        /* Ensure the block still takes up space */
-        display: block;
-        padding: 0;
-        margin: 0;
-      }
-      
-      #title-block-header::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, 0.4);
-      }
-      </style>
+    toc: false 
 ---
 <!--  ::: {.column-page} -->
 <!-- Use column-page for better control over content width on wider screens -->
